feature(project) Send an account verification link via email
